--- a/Ducxti/index.html
+++ b/Ducxti/index.html
@@ -10,6 +10,7 @@
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@600&display=swap" rel="stylesheet">  
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
@@ -236,12 +237,12 @@
 </div>
 
 <div class="row nsl">
-    <div class="col text-left d-md-block">
+    <div class="col-sm-5 text-left d-md-block">
         <h1>New Superleggera V4</h1>
         <p>152,2 Kg dry weight for 234 HP (in race configuration) for this incredible product. These numbers are achieved thanks to the full carbon fiber frame and a vast use of titanium and magnesium components.</p>
+        <a href="nsl.html" class="btn-danger btn">More</a>
     </div>
 </div>
-
 </div>
  <div class="row bike-text">
      <div class="col text-center">
@@ -253,34 +254,22 @@
 
 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 
-<ol class="carousel-indicators"><!--
-список індикаторів (полоски переключення з низу)-->
-
-<li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-
-<li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-
-<li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-
-<li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
-
-</ol>
 <div class="carousel-inner"><!--Початок самої каруселі-->
 <div class="carousel-item active">
 <img src="MIG-RR-Limited-Edition-1334x820.jpg" class="d-block w-100" alt="..."> <!--фото-->
-<div class="carousel-caption d-none d-md-block">
+<div class="carousel-caption d-md-block">
 <h5>MIG-RR Limited Edition</h5><!--підпис-->
 </div>
 </div>
 <div class="carousel-item">
 <img src="MIG-S-1334x820.jpg" class="d-block w-100" alt="..."><!--фото-->
-<div class="carousel-caption d-none d-md-block">
+<div class="carousel-caption d-md-block">
 <h5>MIG-S</h5><!--підпис-->
 </div>
 </div>
 <div class="carousel-item">
 <img src="MIG-Scrambler-1334x820.jpg" class="d-block w-100" alt="..."><!--фото-->
-<div class="carousel-caption d-none d-md-block">
+<div class="carousel-caption d-md-block">
 <h5>e-Scrambler</h5><!--підпис-->
 </div>
 </div>
@@ -301,6 +290,48 @@
 </a>
 </div> <!--кінець каруселі-->
 
+<div class="row sub">
+    <div class="col text-center">
+        <h1>Subscribe to the Ducati newsletter</h1>
+    </div>
+</div>
+<div class="container-fluid podval">
+       <div class="row lic">
+           <div class="col pt-5 text-center ducati">
+                  <p>DUCATI</p>
+           </div>
+       </div>
+       <div class="row lic">
+           <div class="col text-right">
+               <p>TERMS OF USE</p>
+           </div>
+           <div class="col text-center">
+                <p>PRIVACY INFORMATION</p>
+           </div>
+           <div class="col text-left">
+              <p>COOKIES INFORMATION</p>
+           </div>
+       </div>
+       <div class="row lic">
+           <div class="col text-center">
+            <p>Copyright © 2020 Ducati Motor Holding S.p.A. – A Sole Shareholder Company - A Company subject to the Management and Coordination</p>      
+            <p>activities of AUDI AG. All rights reserved. VAT 05113870967</p>
+           </div>
+       </div>
+       <div class="row lic">
+           <div class="col text-center">
+            <a class="pr-5" href="https://www.instagram.com/ducati1337/"><i class="fa fa-instagram btn-dark fa-2x" aria-hidden="true"></i></a>
+            <a class="pr-5" href="https://www.facebook.com/profile.php?id=100034995743056"><i class="fa fa-facebook btn-dark fa-2x" aria-hidden="true"></i></a>
+            <a class="pr-5" href="https://www.youtube.com/channel/UCT_Vo3I87ZU9JGXGH00WS2Q?view_as=subscriber"><i class="fa fa-youtube btn-dark fa-2x" aria-hidden="true"></i></a>
+            <a class="pr-5" href="https://www.twitch.tv/ducati1337"><i class="fa fa-twitch btn-dark fa-2x" aria-hidden="true"></i></a>
+           </div>
+       </div>
+
+
+    
+  
+
+</div>
 
 
 
@@ -309,18 +340,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
+<script src="https://use.fontawesome.com/ad1d41553a.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
